--- a/view/shypApiForm.ejs
+++ b/view/shypApiForm.ejs
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <style>
-          table, th, td {
-          border:1px solid black;
-        }
+        
         #main{
             width:100%;
             height: 500px;
@@ -36,7 +34,7 @@
 
     
 
-    <form action="/apiCalculatedPrice" method="POST">
+    <form action="/shypApiCalculatedPrice" method="POST">
     
     <h4>Enter Source Code <input type="text" name = "sourcePin" placeholder="Enter Source Pin" >
     </h4>
